# parteeengine-v2

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-cl.yml  cppbuild.yml  cpplinter.yml  cpptest.yml  unitTests.yml
github/workflows/: cpp-cl.yml
include/core/: ComponentManager.hpp  ComponentStorage.hpp  Engine.hpp  Entity.hpp  EntityManager.hpp  Transform.hpp  Transform2d.hpp
include/core/entities/: ComponentManager.hpp  ComponentStorage.hpp  Entity.hpp  EntityManager.hpp
include/core/events/: EventBus.hpp  EventManager.hpp  QuitEvent.hpp
include/core/modules/: ModuleBase.hpp  ModuleManager.hpp
include/rendering/window/: NativeWindowFactory.hpp  NativeWindowUtil.hpp  Window.hpp  WindowConfig.hpp  WindowFactory.hpp  WindowHandle.hpp  WindowManagerModule.hpp
include/util/: Color.hpp  OSUtil.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/: main.cpp
src/core/: Engine.cpp  EntityManager.cpp
src/core/entities/: EntityManager.cpp
src/core/modules/: ModuleManager.cpp
src/rendering/window/: NativeWindowFactory.cpp  Window.cpp  WindowFactory.cpp  WindowManagerModule.cpp
test/: CMakeLists.txt
test/core/: ComponentManagerTest.cpp  EngineTest.cpp  EntityManagerTest.cpp
test/core/entities/: ComponentManagerTest.cpp  EntityManagerTest.cpp
test/core/events/: EventBusTest.cpp  EventManagerTest.cpp
test/core/modules/: ModuleManagerTest.cpp
